--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
