--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-markdown": "^9.0.1",
+    "react-ticker": "^1.3.2",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
